fixed demo delay bug

--- a/demo.html
+++ b/demo.html
@@ -40,7 +40,8 @@
       var opts = {
         selector: $this,
         placement: $this.data('placement'),
-        content: "test"
+        content: "test",
+        delay: 0
       };
       simple.Tooltip(opts);
     });
